--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   height: 100%;
   margin: 0;
 }
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
 
 
 
