--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ body {
   margin: 0;
 }
 
-IMG.displayed {
+.displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto 
+}
 
 
 
