--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ h1 {
 
 img {
   display: block;
-  margin-left: center;
-  margin-right: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav {
@@ -17,6 +17,9 @@ nav a{
   background: #ccc;
 }
 
+figcaption {
+  
+}
 
 body {
   width: 100%;
