--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ figcaption {
   text-align: center;
 }
 
+p {
+  text-align: center;
+  width: 800px;
+}
+
 body {
   width: 100%;
   height: 100%;
