--- a/style.css
+++ b/style.css
@@ -1,5 +1,52 @@
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a{
+  padding: 10;
+  background: #ccc;
+}
+
+figcaption {
+  text-align: center;
+}
+
+p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
+#featured-property p {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+}
+
+#details > div {
+  float: left;
+}
+
+
+
